Bug 759615 - Avoid running the PostUpdate step when only staging the update in the background; r=rstrong